# so2x-system

./: README.md  pyproject.toml
.claude/commands/: flow-feature.md  flow-init.md  flow-qa.md  flow-review.md  self-improve.md
candidates/rules/: browser-verification-missing.md
commands/: flow-feature.md  flow-init.md  flow-qa.md  flow-review.md  self-improve.md
config/: evolution.yaml  gates.yaml  routing.yaml  templates.yaml
docs/: ARCHITECTURE.md  PRD.md  QA.md  RULES.md  SKILLS.md
outputs/runs/: task-001-missing-browser-proof.json  task-002-missing-browser-proof.json  task-003-missing-browser-proof.json  task-004-promote-repeated-qa-failures.json
scripts/: execute.py  install.py
signals/qa-failures/: task-001-missing-browser-proof.json  task-002-missing-browser-proof.json  task-003-missing-browser-proof.json
src/so2x_system/: runner.py
src/so2x_system/adapters/: __init__.py  superpowers.py
state/: history.jsonl  index.json  metrics.json
tasks/qa/: task-001-missing-browser-proof.md  task-002-missing-browser-proof.md  task-003-missing-browser-proof.md
tasks/review/: task-004-promote-repeated-qa-failures.md
tests/: test_execute.py  test_install.py
